# pdm-start

./: .gitignore  README.md  pyproject.toml
src/pdm_start/: main.py
