[project]
name = "pdm-start"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Levy Marques Nunes", email = "levy.vix@gmail.com"},
]
dependencies = [
    "black>=24.4.2",
    "typer>=0.12.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
